@@ -7,6 +7,7 @@ Version 3.2.0 - SVN
  - Add runpipe program for connecting stdin/out of two processes.
  - Rename compare_program.sh to *_wrapper, allow symlinked usage.
  - Add FLOAT command to checktestdata program.
+ - Add countdown before contest and timezone to clock.
 
 Version 3.1.0 - 14 July 2010
 ----------------------------
